Funcionamiento de Update Paso corregido